[package]
name = "pyonear"
version = "0.1.0"
edition = "2021"
include = ["/src", "/LICENSE", "/pyproject.toml"]
description = "Python bindings for NEAR Rust primitives."
license = "MIT"
repository = "https://github.com/kevinheavey/pyonear"

[lib]
name = "pyonear"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0.136"
serde_json = "^1.0.59"
derive_more = "0.99.17"
pyo3 = { git = "https://github.com/PyO3/pyo3", rev = "1d20f2a", features = ["macros", "extension-module", "abi3-py37"] }
solders-traits = { git = "https://github.com/kevinheavey/solders", rev = "e197350" }
solders-macros = { git = "https://github.com/kevinheavey/solders", rev = "e197350" }
near-crypto = "0.15.0"
ed25519-dalek = "1.0.1"
serde_with = "2.1.0"
secp256k1 = "0.24"
borsh = "0.9.3"
near-primitives = { version = "0.15.0", features = ["nightly"] }
near-vm-errors = "0.15.0"
near-primitives-core = "0.15.0"
