[package]
name = "pyonear"
version = "0.2.0"
edition = "2021"
include = ["/src", "/LICENSE", "/pyproject.toml"]
description = "Python bindings for NEAR Rust primitives."
license = "MIT"
repository = "https://github.com/kevinheavey/pyonear"

[lib]
name = "pyonear"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0.136"
serde_json = "^1.0.59"
derive_more = "0.99.17"
pyo3 = { version = "0.18.0", features = ["macros", "extension-module", "abi3-py37"] }
solders-traits = "0.14.1"
solders-macros = "0.14.1"
near-crypto = "0.17.0"
ed25519-dalek = "1.0.1"
serde_with = "2.1.0"
secp256k1 = "0.24"
borsh = { version = "0.10.2", features = ["rc"] }
near-primitives = { version = "0.17.0", features = ["nightly"] }
near-vm-errors = "0.17.0"
near-primitives-core = "0.17.0"
